overflow scroll fixed

--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -24,7 +24,8 @@ body {
   overflow: hidden;
 
   @media only screen and (max-width: 500px) {
-    overflow: scroll;
+    overflow-x: hidden;
+    overflow-y: scroll;
   }
 }
 
